# rusha_spark

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  GZIP_VERIFICATION.md  LICENSE  Makefile  README.md  build.sbt  docker-compose.yml  generate_concat_data.py  pyproject.toml  run_gzip_test.sh  start-spark.sh  start_history_server.sh  start_spark_master.sh  start_spark_worker.sh  start_thrift_server.sh  start_thrift_server_k8s.sh  verify_concat_gzip.py
.agent/skills/build-push-ecr/: SKILL.md
.agent/skills/entrypoint-behavior/: SKILL.md
.agent/skills/hadoop-native-check/: SKILL.md
.agent/skills/runtime-libs-check/: SKILL.md
.agent/skills/sbt-deps/: SKILL.md
.factory/droids/: ecr-image-builder.md
conf/: hive-site.xml  z-hue.ini
local/: build.sh  tmp_credentials.sh  up.sh  up_node.sh
playbooks/: build.yml
project/: plugins.sbt
scripts/: release.sh  start_thrift_server.sh
src/: README.md
src/main/scala/: App.scala
