[tool.poetry]
name = "rusha-spark"
version = "0.1.0"
description = ""
authors = ["Emmanuel <kipronofb@outlook.com>"]
readme = "README.md"
packages = [{include = "spark_container"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
