[tool.poetry]
name = "rusha-spark-3.5-base"
version = "0.1.1"
description = ""
authors = ["Emmanuel <kipronofb@outlook.com>"]
readme = "README.md"
packages = [{include = "spark_container"}]

[tool.poetry.dependencies]
python = "^3.11"
spacy = "3.7"
mlflow = "^2.19.0"
psycopg2 = "^2.9.10"
boto3 = "^1.35.92"

[tool.poetry.group.dev.dependencies]
pip = "^24.3.1"
ansible = "^11.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
